<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="297dp"
        tools:layout_editor_absoluteY="148dp"
        android:background="@color/activity4_Background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:background="@color/activity4_Bar"
                >

                <LinearLayout
                    android:layout_width="255dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="147dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/korean" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="299dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="21dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:paddingLeft="40dp"
                        app:srcCompat="@drawable/flame" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:paddingRight="40dp"
                        android:textColor="@color/black"
                        android:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView24"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        app:srcCompat="@drawable/diamond" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:paddingRight="40dp"
                        android:text="18" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:paddingTop="15dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="115dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/like" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:text="@string/activity4_Demonst" />

                    <ImageView
                        android:id="@+id/imageView25"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/signal" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="30dp">

                <LinearLayout
                    android:layout_width="156dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView26"
                        android:layout_width="156dp"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/question" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity4_Formal"
                        android:textColor="@color/black"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/imageView27"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/signal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="50dp">

                    <ImageView
                        android:id="@+id/imageView28"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/suit" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:text="@string/activity4_Polite" />

                    <ImageView
                        android:id="@+id/imageView29"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/signal" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:paddingTop="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="158dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView30"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/food" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/activity4_Food"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/imageView32"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/signal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="50dp">

                    <ImageView
                        android:id="@+id/imageView31"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/talk" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:text="@string/activity4_Pronouns" />

                    <ImageView
                        android:id="@+id/imageView33"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/signal" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="25dp">

                    <ImageView
                        android:id="@+id/imageView34"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/animal" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:text="@string/activity4_Animal" />

                    <ImageView
                        android:id="@+id/imageView37"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/signal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="137dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="25dp">

                    <ImageView
                        android:id="@+id/imageView35"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/hand" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:text="@string/activity4_Hand" />

                    <ImageView
                        android:id="@+id/imageView38"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/signal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView36"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/setting" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:text="@string/activity4_Setting" />

                    <ImageView
                        android:id="@+id/imageView39"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/signal" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="15dp">

                <ImageView
                    android:id="@+id/imageView46"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/dot" />

                <ImageView
                    android:id="@+id/imageView41"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/weight" />

                <ImageView
                    android:id="@+id/imageView42"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/face" />

                <ImageView
                    android:id="@+id/imageView43"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/shield" />

                <ImageView
                    android:id="@+id/imageView44"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/market" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>